--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   "homepage": "https://github.com/WickyNilliams/react-simple-colorpicker",
   "dependencies": {
     "colr": "^1.0.8",
-    "react": "^0.12.2"
   },
   "devDependencies": {
     "envify": "^3.0.0",
@@ -43,5 +42,8 @@
     "grunt-env": "^0.4.1",
     "grunt-react": "^0.10.0",
     "reactify": "^0.17.1"
+  },
+  "peerDependencies": {
+    "react": ">=0.13.0 <0.15.0 || 0.14.0-beta1 || 0.14.0-beta2 || 0.14.0-beta3"
   }
 }
